--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             controller.onChange(function(v) {
               console.log(window.selected)
                 //t = d3.superformulaTypes[window.selected]
-                n = d3.superformula().size(size*50).segments(360).type(window.selected)
+                n = d3.superformula().size(size*50).segments(180).type(window.selected)
                 d = n.param(p,v)
                 d3.select(".big").transition().duration(0).attr("d", d)
 
@@ -157,7 +157,7 @@ var svg = d3.select(".intro-svg")
     var big = d3.superformula()
         .type("circle")
         .size(size * 50)
-        .segments(360);
+        .segments(180);
 
 
 
@@ -205,7 +205,7 @@ var svg = d3.select(".intro-svg")
         if(window.loopit) {
           d = d3.superformulaTypes[ii]
           window.selected = d
-          n = d3.superformula().size(size*50).segments(360).type(d)
+          n = d3.superformula().size(size*50).segments(180).type(d)
 
           parameters.forEach(function(p) {
               data = d3.superformulaObjects[d]
@@ -217,6 +217,7 @@ var svg = d3.select(".intro-svg")
           })
 
           d3.select(".big").transition().duration(1000).attr("d",n)
+          .delay(500)
             .each("end", loop);
             ii = (ii+1 == d3.superformulaTypes.length) ? 0 : ii+1;
         }
