--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ var CodeSlam = function() {
 
 CodeSlam.prototype.log = function() {
   $(".main").fadeOut("fast", function() {
-    $(".content").html("<div class='container'><h1>.log()</h1></div>")
+    $(".content").html("<div class='container'><h1>.log()</h1><h3>codeslam.log().length === 0</h3><h4>codeslams are coming</h4></div>")
     $(".content").fadeIn()
   })
   return this;
