--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row stuff" style="display:none;">
                   <div class="col-md-12">
-                    <p class="stuff" style="display:none;">
+                    <p>
                       Programming is a creative endeavor.  Logic is your tool.
                       <br>
                       Programming is art.  Output is not the only canvas of expression.
@@ -99,8 +99,9 @@
                   </div>
                 </div>
 
-                <div class="row">
+                <div class="row stuff" style="display:none;">
                   <div class="col-md-12">
+                    <p>Sign up with your email to find out when codeslams are here.</p>
                     <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -138,7 +139,6 @@
 
 }
 #mc_embed_signup {
-  display:none;
   padding:0;
   margin:0 auto;
 }
@@ -149,10 +149,10 @@
 /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
    We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
-<div class="stuff" id="mc_embed_signup">
+<div  id="mc_embed_signup">
 <form action="//codeslam.us11.list-manage.com/subscribe/post?u=e2e5a04852a30d93a8734a602&amp;id=2d6df73d73" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
   <div id="mc_embed_signup_scroll">
-<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="sign up with your email address to hear when codeslams are here" required>
+<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email" required>
   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
   <div style="position: absolute; left: -5000px;"><input type="text" name="b_e2e5a04852a30d93a8734a602_2d6df73d73" tabindex="-1" value=""></div>
   <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
